--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header *ngIf="showHeader"></app-header>
+<app-sidebar *ngIf="showSidebar"></app-sidebar>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
