--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron d-flex align-items-center">
-  <div class="container text-center">
-    <div class="login-container">
+
+    <div class="settings-container">
       <h2>Configuraciones</h2>
       <form>
         <div class="form-group">
@@ -22,7 +22,7 @@
         </a>
       </form>
     </div>
-  </div>
+
 
   <section id="features" class="bg-white">
     <div class="container">
